kubernetes/backend/Backend-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: dockerhub/finch-backend:latest
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
