kubernetes/backend/Backend-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finch-ingress
spec:
  rules:
  - host: finch.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
